@@ -1,5 +1,11 @@
 2012-12-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* jtag3.c: Enable interactive adjustment of the various
+	clock frequencies (JTAG Xmega, JTAG megaAVR, PDI Xmega)
+	through the set_sck_period() callback.
+
+2012-12-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* jtag3.c: Remove unused code that was left over from
 	cloning the jtagmkII.c implementation
 
